--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "gatsby-config",
+  "name": "gatsby-plugin-config",
   "version": "1.0.0",
   "description": "Gatsby config",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
   "module": "build/module/index.js",
-  "repository": "https://github.com/birkir/gatsby-config",
+  "repository": "https://github.com/birkir/gatsby-plugin-config",
   "license": "MIT",
   "keywords": [],
   "scripts": {
@@ -51,9 +51,10 @@
     "node": ">=8.9"
   },
   "dependencies": {
-    "sha.js": "^2.4.11"
+    "dotenv": "^6.1.0"
   },
   "devDependencies": {
+    "@types/dotenv": "^4.0.3",
     "ava": "1.0.0-beta.7",
     "codecov": "^3.1.0",
     "cz-conventional-changelog": "^2.1.0",
@@ -62,6 +63,7 @@
     "nyc": "^13.0.1",
     "opn-cli": "^3.1.0",
     "prettier": "^1.14.3",
+    "require-new": "^1.1.1",
     "standard-version": "^4.4.0",
     "trash-cli": "^1.4.0",
     "tslint": "^5.11.0",
